--- a/MEaI_transformer_V0.1.ipynb
+++ b/MEaI_transformer_V0.1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "cb7a1e93-46ba-47a8-ade9-ab1765392b22",
    "metadata": {},
    "outputs": [],
@@ -25,27 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "714bc948-2cc9-4ee7-ac04-68045adfbcc7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-10-31 18:34:12.226709: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /tmp/ipykernel_212658/2539169885.py:5: experimental_run_functions_eagerly (from tensorflow.python.eager.def_function) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use `tf.config.run_functions_eagerly` instead of the experimental version.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -56,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "6bc70556-f68f-431d-b1a6-14d6bff17846",
    "metadata": {},
    "outputs": [
@@ -66,7 +49,7 @@
        "'2.10.0'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "98476b13-a788-49b4-8124-84128d2f34ba",
    "metadata": {},
    "outputs": [],
@@ -112,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "638871f0-8ef9-4adc-99cd-b64c2888b12c",
    "metadata": {},
    "outputs": [],
@@ -145,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "cf5dcc9a-5dee-4938-b36c-e9dcc7f3fac8",
    "metadata": {},
    "outputs": [],
@@ -188,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "id": "77d086f9-f859-469e-b60b-80b7eb333ee2",
    "metadata": {},
    "outputs": [],
@@ -266,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "6a04f127-cd00-4c10-9108-91eaa9ad40c1",
    "metadata": {},
    "outputs": [],
@@ -299,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "id": "f5f59476-541a-4464-88cd-93dfa508543a",
    "metadata": {},
    "outputs": [],
@@ -333,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "6efa655d-44b9-4ace-8684-452262445708",
    "metadata": {},
    "outputs": [],
@@ -343,6 +326,34 @@
     "    seq_len = tf.shape(x)[1]\n",
     "    look_ahead_mask = 1 - tf.linalg.band_part(tf.ones((seq_len, seq_len)), -1, 0)\n",
     "    return look_ahead_mask[tf.newaxis,tf.newaxis,:,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "d8dc3eb8-d03a-49ca-9c96-88f0115513ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1, 1, 5, 5), dtype=float32, numpy=\n",
+       "array([[[[0., 1., 1., 1., 1.],\n",
+       "         [0., 0., 1., 1., 1.],\n",
+       "         [0., 0., 0., 1., 1.],\n",
+       "         [0., 0., 0., 0., 1.],\n",
+       "         [0., 0., 0., 0., 0.]]]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp = tf.constant(np.arange(3*5*7).reshape((3,5,7)), dtype=tf.float32)\n",
+    "\n",
+    "create_look_ahead_mask(tmp)"
    ]
   },
   {
