버전0.2추가(인코더 개수 비고정)

--- a/MEaI_transformer_V0.1.ipynb
+++ b/MEaI_transformer_V0.1.ipynb
@@ -715,12 +715,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "fce26983-41c0-47dd-99d8-7866d8e9dc73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0 not in [1,2,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "id": "675548b6-e924-4d51-bac7-a06f72dffce6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def MEaI_transformer(window_size, forecast_range, P, N, I, num_layers, dff,\n",
+    "def MEaI_transformer(window_size, forecast_range, ref_num_list:list, num_layers, dff,\n",
     "                     d_model, num_heads, dropout,\n",
     "                     name=\"MEaI_transformer\"):\n",
     "\n",
@@ -742,9 +763,16 @@
     "        create_look_ahead_mask, output_shape=(1, None, None),\n",
     "        name='look_ahead_mask')(dec_inputs)\n",
     "    \n",
-    "    #에셋 인코더\n",
+    "    #목표 시퀀스 인코더\n",
     "    Target_seq_outputs = encoder(window_size=window_size, num_layers=num_layers, dff=dff,\n",
     "                          d_model=d_model, num_heads=num_heads, dropout=dropout,name = \"Target_seq_encoder\")(inputs=[inputs])\n",
+    "    \n",
+    "    \n",
+    "    #참조 시퀀스 멀티 인풋 인코더\n",
+    "    assert len(ref_num_list) > 0\n",
+    "    assert 0 not in ref_num_list\n",
+    "    \n",
+    "    for idx, S\n",
     "    \n",
     "    pos_outputs = multi_input_transformer(num_seq=P,window_size=window_size,num_layers=num_layers,dff=dff,\n",
     "                                              d_model=d_model,num_heads=num_heads,dropout=dropout,name=\"pos_siamese_encoder\")(inputs=[pos_inputs])\n",
