--- a/MEaI_transformer_V0.1-Copy1.ipynb
+++ b/MEaI_transformer_V0.1-Copy1.ipynb
@@ -878,9 +878,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MEaI_transformer",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "multi_enc_transformer"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -892,7 +892,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.6"
   },
   "toc-autonumbering": true,
   "toc-showcode": false,
