--- a/MEaI_transformer_V0.1.ipynb
+++ b/MEaI_transformer_V0.1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "cb7a1e93-46ba-47a8-ade9-ab1765392b22",
    "metadata": {},
    "outputs": [],
@@ -25,10 +25,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "714bc948-2cc9-4ee7-ac04-68045adfbcc7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-11-05 16:02:48.900413: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /tmp/ipykernel_12814/2539169885.py:5: experimental_run_functions_eagerly (from tensorflow.python.eager.def_function) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `tf.config.run_functions_eagerly` instead of the experimental version.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -39,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "6bc70556-f68f-431d-b1a6-14d6bff17846",
    "metadata": {},
    "outputs": [
@@ -49,7 +66,7 @@
        "'2.10.0'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +986,7 @@
   "kernelspec": {
    "display_name": "MEaI_transformer",
    "language": "python",
-   "name": "multi_enc_transformer"
+   "name": "meai_transformer"
   },
   "language_info": {
    "codemirror_mode": {
@@ -981,7 +998,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.6"
   },
   "toc-autonumbering": true,
   "toc-showcode": false,
