--- a/MEaI_transformer_V0.2-Copy1.ipynb
+++ b/MEaI_transformer_V0.2-Copy1.ipynb
@@ -1489,7 +1489,11 @@
       "Epoch 8: val_loss did not improve from 0.40443\n",
       "329/329 [==============================] - 442s 1s/step - loss: 0.0833 - val_loss: 0.4099 - lr: 4.2188e-04\n",
       "Epoch 9/20\n",
-      "296/329 [=========================>....] - ETA: 41s - loss: 0.0817"
+      "329/329 [==============================] - ETA: 0s - loss: 0.0821\n",
+      "Epoch 9: val_loss did not improve from 0.40443\n",
+      "329/329 [==============================] - 442s 1s/step - loss: 0.0821 - val_loss: 0.4116 - lr: 1.7798e-04\n",
+      "Epoch 10/20\n",
+      "313/329 [===========================>..] - ETA: 21s - loss: 0.0815"
      ]
     }
    ],
