졸업 논문 완성

--- a/MEaI_transformer_V0.3.ipynb
+++ b/MEaI_transformer_V0.3.ipynb
@@ -2603,46 +2603,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "288f2201-b92a-480b-8493-ca3a62429bb1",
    "metadata": {
-    "scrolled": true,
     "tags": []
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|                                                                                                                                                                                        | 0/1 [00:00<?, ?it/s]"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "4255/4255 [==============================] - 7531s 2s/step - loss: 0.0199 - val_loss: 0.0069 - lr: 0.0010\n",
+      "314/314 [==============================] - 540s 2s/step - loss: 0.0884 - val_loss: 0.0101 - lr: 0.0010\n",
       "Epoch 2/20\n",
-      "4255/4255 [==============================] - 7531s 2s/step - loss: 0.0148 - val_loss: 0.0068 - lr: 0.0010\n",
+      "314/314 [==============================] - 540s 2s/step - loss: 0.0262 - val_loss: 0.0091 - lr: 0.0010\n",
       "Epoch 3/20\n",
-      "4255/4255 [==============================] - 7525s 2s/step - loss: 0.0143 - val_loss: 0.0185 - lr: 0.0010\n",
+      "314/314 [==============================] - 539s 2s/step - loss: 0.0209 - val_loss: 0.0098 - lr: 0.0010\n",
       "Epoch 4/20\n",
-      "4255/4255 [==============================] - 7519s 2s/step - loss: 0.0134 - val_loss: 0.0171 - lr: 0.0010\n",
+      "314/314 [==============================] - 536s 2s/step - loss: 0.0197 - val_loss: 0.0093 - lr: 0.0010\n",
       "Epoch 5/20\n",
-      "4255/4255 [==============================] - 7522s 2s/step - loss: 0.0124 - val_loss: 0.0241 - lr: 0.0010\n",
+      "314/314 [==============================] - 539s 2s/step - loss: 0.0188 - val_loss: 0.0077 - lr: 0.0010\n",
       "Epoch 6/20\n",
-      "4255/4255 [==============================] - 7512s 2s/step - loss: 0.0109 - val_loss: 0.0217 - lr: 9.5000e-04\n",
+      "314/314 [==============================] - 535s 2s/step - loss: 0.0163 - val_loss: 0.0133 - lr: 9.5000e-04\n",
       "Epoch 7/20\n",
-      "4255/4255 [==============================] - 7525s 2s/step - loss: 0.0093 - val_loss: 0.0201 - lr: 9.0250e-04\n",
+      "314/314 [==============================] - 540s 2s/step - loss: 0.0445 - val_loss: 0.0124 - lr: 9.0250e-04\n",
       "Epoch 8/20\n",
-      "4255/4255 [==============================] - 7540s 2s/step - loss: 0.0083 - val_loss: 0.0219 - lr: 8.5737e-04\n",
+      "314/314 [==============================] - 540s 2s/step - loss: 0.0172 - val_loss: 0.0126 - lr: 8.5737e-04\n",
       "Epoch 9/20\n",
-      "4255/4255 [==============================] - 7558s 2s/step - loss: 0.0077 - val_loss: 0.0365 - lr: 8.1451e-04\n",
+      "314/314 [==============================] - 541s 2s/step - loss: 0.0163 - val_loss: 0.0114 - lr: 8.1451e-04\n",
       "Epoch 10/20\n",
-      "4255/4255 [==============================] - 7531s 2s/step - loss: 0.0070 - val_loss: 0.0391 - lr: 7.7378e-04\n",
+      "314/314 [==============================] - 554s 2s/step - loss: 0.0173 - val_loss: 0.0118 - lr: 7.7378e-04\n",
       "Epoch 11/20\n",
-      "2198/4255 [==============>...............] - ETA: 58:33 - loss: 0.0064"
+      "314/314 [==============================] - 541s 2s/step - loss: 0.0154 - val_loss: 0.0104 - lr: 7.3509e-04\n",
+      "Epoch 12/20\n",
+      "314/314 [==============================] - 538s 2s/step - loss: 0.0152 - val_loss: 0.0110 - lr: 6.9834e-04\n",
+      "Epoch 13/20\n",
+      "314/314 [==============================] - 544s 2s/step - loss: 0.0148 - val_loss: 0.0120 - lr: 6.6342e-04\n",
+      "Epoch 14/20\n",
+      "314/314 [==============================] - 545s 2s/step - loss: 0.0150 - val_loss: 0.0335 - lr: 6.3025e-04\n",
+      "Epoch 15/20\n",
+      "314/314 [==============================] - 536s 2s/step - loss: 0.0146 - val_loss: 0.0150 - lr: 5.9874e-04\n",
+      "Epoch 16/20\n",
+      "314/314 [==============================] - 538s 2s/step - loss: 0.0147 - val_loss: 0.0139 - lr: 5.6880e-04\n",
+      "Epoch 17/20\n",
+      "314/314 [==============================] - 538s 2s/step - loss: 0.0142 - val_loss: 0.0155 - lr: 5.4036e-04\n",
+      "Epoch 18/20\n",
+      "314/314 [==============================] - 539s 2s/step - loss: 0.0143 - val_loss: 0.0149 - lr: 5.1334e-04\n",
+      "Epoch 19/20\n",
+      "314/314 [==============================] - 536s 2s/step - loss: 0.0142 - val_loss: 0.0164 - lr: 4.8767e-04\n",
+      "Epoch 20/20\n",
+      "314/314 [==============================] - 536s 2s/step - loss: 0.0139 - val_loss: 0.0097 - lr: 4.6329e-04\n",
+      "MSE:0.140676193894064\n",
+      "MAE:0.30033117995082315\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "Epoch 1/20\n",
+      "4327/4327 [==============================] - 7352s 2s/step - loss: 0.0224 - val_loss: 0.0212 - lr: 0.0010\n",
+      "Epoch 2/20\n",
+      "4327/4327 [==============================] - 7351s 2s/step - loss: 0.0151 - val_loss: 0.0160 - lr: 0.0010\n",
+      "Epoch 3/20\n",
+      "4327/4327 [==============================] - 7365s 2s/step - loss: 0.0147 - val_loss: 0.0086 - lr: 0.0010\n",
+      "Epoch 4/20\n",
+      "4327/4327 [==============================] - 7355s 2s/step - loss: 0.0139 - val_loss: 0.0204 - lr: 0.0010\n",
+      "Epoch 5/20\n",
+      "4327/4327 [==============================] - 7362s 2s/step - loss: 0.0134 - val_loss: 0.0177 - lr: 0.0010\n",
+      "Epoch 6/20\n",
+      "4327/4327 [==============================] - 7362s 2s/step - loss: 0.0126 - val_loss: 0.0219 - lr: 9.5000e-04\n",
+      "Epoch 7/20\n",
+      "4327/4327 [==============================] - 7345s 2s/step - loss: 0.0116 - val_loss: 0.0259 - lr: 9.0250e-04\n",
+      "Epoch 8/20\n",
+      "4327/4327 [==============================] - 7358s 2s/step - loss: 0.0102 - val_loss: 0.0209 - lr: 8.5737e-04\n",
+      "Epoch 9/20\n",
+      "4327/4327 [==============================] - 7377s 2s/step - loss: 0.0089 - val_loss: 0.0285 - lr: 8.1451e-04\n",
+      "Epoch 10/20\n",
+      "4327/4327 [==============================] - 7379s 2s/step - loss: 0.0080 - val_loss: 0.0305 - lr: 7.7378e-04\n",
+      "Epoch 11/20\n",
+      "4327/4327 [==============================] - 7356s 2s/step - loss: 0.0074 - val_loss: 0.0306 - lr: 7.3509e-04\n",
+      "Epoch 12/20\n",
+      "4327/4327 [==============================] - 7348s 2s/step - loss: 0.0068 - val_loss: 0.0290 - lr: 6.9834e-04\n",
+      "Epoch 13/20\n",
+      "4327/4327 [==============================] - 7344s 2s/step - loss: 0.0068 - val_loss: 0.0314 - lr: 6.6342e-04\n",
+      "Epoch 14/20\n",
+      "4327/4327 [==============================] - 7344s 2s/step - loss: 0.0061 - val_loss: 0.0286 - lr: 6.3025e-04\n",
+      "Epoch 15/20\n",
+      "4327/4327 [==============================] - 7349s 2s/step - loss: 0.0057 - val_loss: 0.0357 - lr: 5.9874e-04\n",
+      "Epoch 16/20\n",
+      "4327/4327 [==============================] - 7342s 2s/step - loss: 0.0055 - val_loss: 0.0291 - lr: 5.6880e-04\n",
+      "Epoch 17/20\n",
+      "4327/4327 [==============================] - 7357s 2s/step - loss: 0.0052 - val_loss: 0.0278 - lr: 5.4036e-04\n",
+      "Epoch 18/20\n",
+      "4327/4327 [==============================] - 7345s 2s/step - loss: 0.0050 - val_loss: 0.0266 - lr: 5.1334e-04\n",
+      "Epoch 19/20\n",
+      "4327/4327 [==============================] - 7384s 2s/step - loss: 0.0048 - val_loss: 0.0332 - lr: 4.8767e-04\n",
+      "Epoch 20/20\n",
+      "4327/4327 [==============================] - 7389s 2s/step - loss: 0.0046 - val_loss: 0.0295 - lr: 4.6329e-04\n",
+      "MSE:0.20491898190589816\n",
+      "MAE:0.3699575250049155\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "[0.14067619 0.20491898]\n",
+      "[0.30033118 0.36995753]\n"
      ]
     }
    ],
@@ -2651,10 +2709,10 @@
     "MAE = []\n",
     "\n",
     "#for FORECAST_RANGE in tqdm([24,48,168,336,720]):\n",
-    "for FORECAST_RANGE in tqdm([720]):\n",
+    "for BATCH_SIZE, FORECAST_RANGE in zip([32,2],[168,720]):\n",
     "    #config\n",
     "    params_ETTh1 = {\n",
-    "        'window_size':int(FORECAST_RANGE*1.7),\n",
+    "        'window_size':int(FORECAST_RANGE*1.5),\n",
     "        'forecast_range':FORECAST_RANGE,\n",
     "        'num_layers':6,\n",
     "        'dff':128,\n",
@@ -2697,7 +2755,7 @@
     "    split_by_window_middle = np.array(split_by_window_middle)\n",
     "    split_by_window_low = np.array(split_by_window_low)\n",
     "    label_forecast = np.array(label_forecast)\n",
-    "    BATCH_SIZE = 2\n",
+    "    #BATCH_SIZE = 2\n",
     "    BUFFER_SIZE = 20000\n",
     "    train_dataset = tf.data.Dataset.from_tensor_slices((\n",
     "        {\n",
@@ -2791,10 +2849,11 @@
     "    label_forecast = np.array(label_forecast)\n",
     "    \n",
     "    #Forecast\n",
-    "    fore_step = split_by_window_target.shape[0] // 30\n",
+    "    S_ = 30 if FORECAST_RANGE==168 else 162\n",
+    "    fore_step = split_by_window_target.shape[0] // S_\n",
     "    fore_step_mse = []\n",
     "    fore_step_mae = []\n",
-    "    for i in range(31):\n",
+    "    for i in range(S_+1):\n",
     "        fore_ETTh1 = model([split_by_window_target[i*fore_step:(i+1)*fore_step,:],\n",
     "                            split_by_window_high[i*fore_step:(i+1)*fore_step,:],\n",
     "                            split_by_window_middle[i*fore_step:(i+1)*fore_step,:],\n",
@@ -2809,14 +2868,21 @@
     "                         forecast_input_dec_1\n",
     "                        ])\n",
     "            forecast_input_dec_1 = np.concatenate([forecast_input_dec_1,out.numpy()[:,-1,0].reshape([-1,1])],axis=-1)\n",
-    "        mse = np.mean((out.numpy()[:,:].squeeze() - label_forecast[i*fore_step:(i+1)*fore_step,1:].squeeze())**2,axis=-1)\n",
-    "        mae = np.mean(abs(out.numpy()[:,:].squeeze() - label_forecast[i*fore_step:(i+1)*fore_step,1:].squeeze()),axis=-1)\n",
+    "        #mse = np.mean((out.numpy().squeeze() - label_forecast[i*fore_step:(i+1)*fore_step,1:].squeeze())**2,axis=-1)\n",
+    "        #mae = np.mean(abs(out.numpy().squeeze() - label_forecast[i*fore_step:(i+1)*fore_step,1:].squeeze()),axis=-1)\n",
+    "        mse = (out.numpy().squeeze() - label_forecast[i*fore_step:(i+1)*fore_step,1:].squeeze())**2\n",
+    "        mae = abs(out.numpy().squeeze() - label_forecast[i*fore_step:(i+1)*fore_step,1:].squeeze())\n",
     "        fore_step_mse.append(mse)\n",
     "        fore_step_mae.append(mae)\n",
     "    fore_step_mse = np.concatenate(fore_step_mse,axis=0)\n",
     "    fore_step_mae = np.concatenate(fore_step_mae,axis=0)   \n",
     "    MSE.append(np.mean(fore_step_mse))\n",
     "    MAE.append(np.mean(fore_step_mae))\n",
+    "    print(f'MSE:{np.mean(fore_step_mse)}')\n",
+    "    print(f'MAE:{np.mean(fore_step_mae)}')\n",
+    "    \n",
+    "    print('-'*100)\n",
+    "    \n",
     "MSE = np.array(MSE)\n",
     "MAE = np.array(MAE)\n",
     "print(MSE)\n",
@@ -2850,72 +2916,61 @@
    "source": [
     "```python\n",
     "print(MSE)\n",
+    "[0.07515048614661463, 0.14425535643768017, 0.140676193894064  , 0.1402830100292082]\n",
     "[0.07515048614661463, 0.14425535643768017, 0.11603953209086278, 0.1402830100292082]\n",
     "print(MAE)\n",
+    "[0.21208309424960112, 0.28995917921412095, 0.30033117995082315, 0.2995852465627529]\n",
     "[0.21208309424960112, 0.28995917921412095, 0.267602527298358  , 0.2995852465627529]\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 63,
    "id": "70a67ae9-8ba3-436e-a617-bd0c779f1b5d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3112"
+       "(20, 720)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "    fore_ETTh1 = model([split_by_window_target,split_by_window_high,split_by_window_middle,split_by_window_low,label_forecast[:,0,np.newaxis]])\n",
-    "    forecast_input_dec_1 = np.concatenate([label_forecast[:,0,np.newaxis],fore_ETTh1.numpy().reshape((-1,1))],axis=-1)\n",
-    "    for _ in range(FORECAST_RANGE-1):\n",
-    "        out = model([\n",
-    "                     split_by_window_target,\n",
-    "                     split_by_window_high,\n",
-    "                     split_by_window_middle,\n",
-    "                     split_by_window_low,\n",
-    "                     forecast_input_dec_1\n",
-    "                    ])\n",
-    "        forecast_input_dec_1 = np.concatenate([forecast_input_dec_1,out.numpy()[:,-1,0].reshape([-1,1])],axis=-1)\n",
-    "        \n",
-    "    mse = np.mean((out.numpy()[:,:].squeeze() - label_forecast[:,1:].squeeze())**2,axis=-1)\n",
-    "    MSE.append(np.mean(mse))\n",
-    "    mae = np.mean(abs(out.numpy()[:,:].squeeze() - label_forecast[:,1:].squeeze()),axis=-1)\n",
-    "    MAE.append(np.mean(mae))"
+    "tmp = (out.numpy().squeeze() - label_forecast[i*fore_step:(i+1)*fore_step,1:].squeeze())\n",
+    "tmp = np.concatenate([tmp,tmp],axis=0)\n",
+    "tmp.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 55,
    "id": "0303fc8b-cc7c-48b6-892d-33de1048873b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2, 285)"
+       "(1621, 1224)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "split_by_window_target[3110:311*11,:].shape"
+    "split_by_window_target.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 57,
    "id": "1e2480b9-1ffe-4b87-ac1e-cbee54e35afc",
    "metadata": {},
    "outputs": [
@@ -2923,19 +2978,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3112,) (3112,)\n",
-      "[0.04551527303309174] [0.15398117254306481]\n"
+      "(1620,) (1620,)\n",
+      "[0.38114890286944747] [0.5304478185272197]\n"
      ]
     }
    ],
    "source": [
     "#Forecast\n",
     "#일단 되면 30개로 나누자!\n",
-    "fore_step = split_by_window_target.shape[0] // 30\n",
+    "fore_step = split_by_window_target.shape[0] //162\n",
     "\n",
     "fore_step_mse = []\n",
     "fore_step_mae = []\n",
-    "for i in range(31):\n",
+    "for i in range(162):\n",
     "    fore_ETTh1 = model([split_by_window_target[i*fore_step:(i+1)*fore_step,:],\n",
     "                        split_by_window_high[i*fore_step:(i+1)*fore_step,:],\n",
     "                        split_by_window_middle[i*fore_step:(i+1)*fore_step,:],\n",
